Update portfolio item

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </div>
                 <!--Portfolio item 01-->
                 <div class="portfolio">
-                    <a href="https://github.com/AmmarCode/Trivia-API-FSND-Project2/tree/master/starter" target="_blank" class="portfolio--item">
-                        <img src="img/trivia.png" alt="" class="portfolio--img">
+                    <a href="https://am-commerce.herokuapp.com/" target="_blank" class="portfolio--item">
+                        <img src="img/commerce.png" alt="" class="portfolio--img">
                     </a>
                 </div>         
             </section>
