--- a/index.html
+++ b/index.html
@@ -37,8 +37,27 @@
                 <p class="section-subtitle--intro">
                     A Full-Stack Web Developer based in Tempe, Arizona.
                     </br> Enjoys learning new technologies and love creating dynamic Software. 
-                    Looking to join a Software Engineering team to contribute towards great success.
+                    Looking to join a Software Engineering team to contribute towards a common goal.
                 </p>
+                <ul class="social-list">
+                    <li class="social-list--item">
+                        <a href="img/Ammar Jalabi Resume 2021.pdf" download class="social-list--link" target="_blank">
+                            <i id="icon" class="fas fa-file-alt"></i>
+                        </a>
+                    </li>
+                    <li class="social-list--item">
+                        <a class="social-list--link" 
+                        href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
+                            <i id="icon" class="fab fa-linkedin-in"></i>
+                        </a>
+                    </li>
+                    <li class="social-list--item">
+                        <a class="social-list--link" 
+                        href="https://github.com/AmmarCode" target="_blank">
+                            <i id="icon" class="fab fa-github"></i>
+                        </a>
+                    </li>
+                </ul>
             </section>
         </header>
 
@@ -49,18 +68,14 @@
             <section class="about">
                 <div class="section-body--about">
                     <p>
-                        Self-taught Full Stack Python Web Developer based out of Tempe, Arizona.</br>detail-oriented, self-motivated problem-solver with 
-                        exceptional experience in communication skills combined with 
-                        a fluency in multiple languages (English, Arabic, Mandarin).
+                        Demonstrated achiever with a track record of self-teaching through multiple programming courses/certificats. Possess great communication skills combined with a fluency in several languages (English, Arabic, Mandarin, and Turkish).Fast learner, strong problem solver, Team player, and full of positive energy.
                     </br>
                     </br>
-                        Skilled in Python, Django, Flask, PostgreSQL, JavaScript, HTML, CSS, Git, Github,
-                        and some background in Docker,
-                        Kubernetes, REACT and AWS. Always eager to grow and learn new technologies.
+                    Skilled in <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>JavaScript</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
+                    <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu 20.04</strong>. Always eager to grow and learn new technologies.
                     </br>
                     </br>
-                        Seeking opportunities to leverage my skills with an organization that offers equal 
-                        opportunity and promotes growth and development of dedicated individuals.
+                        Seeking opportunities to leverage my skills with a Software Engineering team to contribute towards a common goal.
                     </p>
                 </div>
             </section>
