Update styles.css, Add video background to index.html, Add resume to navbar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="img/Ammar Jalabi Resume 2021.pdf" class="nav-link" target="_blank">Resume</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -36,28 +37,31 @@
                 </h1>
                 <p class="section-subtitle--intro">
                     A Full-Stack Web Developer based in Tempe, Arizona.
-                    </br> Enjoys learning new technologies and love creating dynamic Software. 
+                    </br> Enjoys learning new technologies and loves creating dynamic Software. 
                     Looking to join a Software Engineering team to contribute towards a common goal.
                 </p>
-                <ul class="social-list">
-                    <li class="social-list--item">
-                        <a href="img/Ammar Jalabi Resume 2021.pdf" download class="social-list--link" target="_blank">
-                            <i id="icon" class="fas fa-file-alt"></i>
-                        </a>
-                    </li>
-                    <li class="social-list--item">
-                        <a class="social-list--link" 
+                <ul class="social-list--intro">
+                    <li class="social-list--item---intro">
+                        <a class="social-list--link---intro" 
                         href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
                             <i id="icon" class="fab fa-linkedin-in"></i>
                         </a>
                     </li>
-                    <li class="social-list--item">
-                        <a class="social-list--link" 
+                    <li class="social-list--item---intro">
+                        <a class="social-list--link---intro" 
                         href="https://github.com/AmmarCode" target="_blank">
                             <i id="icon" class="fab fa-github"></i>
                         </a>
                     </li>
+                    <li class="social-list--item---intro">
+                        <a href="img/Ammar Jalabi Resume 2021.pdf" download class="social-list--link---intro" target="_blank">
+                            <i id="icon" class="fas fa-file-al">Resume</i>
+                        </a>
+                    </li>
                 </ul>
+                <video autoplay muted loop>
+                    <source src="img/background.mp4" type="video/mp4">
+                </video>
             </section>
         </header>
 
