--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale= 1.0">
         <title>Ammar Jalabi</title>
+        <link rel="shortcut icon" type="image/png" href="img/code.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" 
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
         <link href="https://fonts.googleapis.com/css?family=source+code+pro:400, 900|
                     Source+Snas+Pro:300, 900&display=swap" rel="stylesheet">
-
+        
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
@@ -35,16 +39,12 @@
                 <h1 class="section-title--intro" >
                      Hello, I am <strong>Ammar Jalabi</strong>
                 </h1>
-                <p class="section-subtitle--intro">
-                    A Full-Stack Web Developer based in Tempe, Arizona.
-                    </br> Enjoys learning new technologies and loves creating dynamic Software. 
-                    Looking to join a Software Engineering team to contribute towards a common goal.
-                </p>
+                <p class="section-subtitle--intro" ><span class="txt-type" data-wait="3000" data-words='["A Full-Stack Software Developer based in Tempe, Arizona.", "I Enjoy learning new technologies and developing dynamic Software."]'></span><span class="cursor">&nbsp;</span></p>
                 <ul class="social-list--intro">
                     <li class="social-list--item---intro">
                         <a class="social-list--link---intro" 
                         href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
-                            <i id="icon" class="fab fa-linkedin-in"></i>
+                            <i id="icon" class="fab fa-linkedin"></i>
                         </a>
                     </li>
                     <li class="social-list--item---intro">
@@ -55,7 +55,7 @@
                     </li>
                     <li class="social-list--item---intro">
                         <a href="img/Ammar Jalabi Resume 2021.pdf" download class="social-list--link---intro" target="_blank">
-                            <i id="icon" class="fas fa-file-al">Resume</i>
+                            <i id="icon" class="fas fa-file-alt"></i>
                         </a>
                     </li>
                 </ul>
@@ -68,17 +68,15 @@
         <!--About-->
         <h3 class="section-title--about" id="about">About Me</h3>
         <section class="flex">
-            <img src="img/Ammar2.png" alt="Ammar's pic" class="about--img">
+            <img src="img/Ammar2.png" alt="Ammar's pic" class="about--img" data-aos="fade-right">
             <section class="about">
-                <div class="section-body--about">
+                <div class="section-body--about" data-aos="fade-up">
                     <p>
-                        Demonstrated achiever with a track record of self-teaching through multiple programming courses/certificats. Possess great communication skills combined with a fluency in several languages (English, Arabic, Mandarin, and Turkish).Fast learner, strong problem solver, Team player, and full of positive energy.
-                    </br>
-                    </br>
-                    Skilled in <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>JavaScript</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
-                    <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu 20.04</strong>. Always eager to grow and learn new technologies.
-                    </br>
-                    </br>
+                        Demonstrated achiever with a track record of self-teaching through multiple programming courses/certificates. Possess great communication skills combined with fluency in several languages (English, Arabic, Mandarin, and Turkish). Fast learner, and strong problem solver. Engaged team player, with lots of positive energy.
+                    </br>                    
+                        Skilled in <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>JavaScript</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
+                        <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu 20.04</strong>. Always eager to grow and learn new technologies.
+                    </br>            
                         Seeking opportunities to leverage my skills with a Software Engineering team to contribute towards a common goal.
                     </p>
                 </div>
@@ -89,15 +87,15 @@
         <h3 class="section-title--skills" id="skills">Skills</h3>
         <section class="skills">
             <div class="skills--imgs">
-                <img src="img/python.png" class="skill--img">
-                <img src="img/django.png" class="skill--img">
-                <img src="img/postgresql.png" class="skill--img">
-                <img src="img/html5.png" class="skill--img">
-                <img src="img/css3.png" class="skill--img">
-                <img src="img/javascript.png" class="skill--img">
-                <img src="img/git.png" class="skill--img">
-                <img src="img/github.png" class="skill--img">
-                <img src="img/sass.png" class="skill--img">
+                <img src="img/python.png" class="skill--img" data-aos="fade-up">
+                <img src="img/django.png" class="skill--img" data-aos="fade-down">
+                <img src="img/postgresql.png" class="skill--img" data-aos="fade-up">
+                <img src="img/html5.png" class="skill--img" data-aos="fade-down">
+                <img src="img/css3.png" class="skill--img" data-aos="fade-up">
+                <img src="img/javascript.png" class="skill--img" data-aos="fade-down">
+                <img src="img/git.png" class="skill--img" data-aos="fade-up">
+                <img src="img/github.png" class="skill--img" data-aos="fade-down">
+                <img src="img/sass.png" class="skill--img" data-aos="fade-up">
             </div>
         </section>
 
@@ -107,27 +105,59 @@
             <section class="portfolio">
                 <!--Portfolio item 01-->
                 <div class="portfolio">
-                    <a href="https://ammarcode.github.io/search-CS50-project0/index.html" target="_blank" class="portfolio--item">
+                    <div class="portfolio--item">
                         <img src="img/google.png" alt="" class="portfolio--img">
-                    </a>
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Search</span>
+                            <span class="portfolio--description---detail">HTML -  SASS</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://ammarcode.github.io/search-CS50-project0/index.html" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/search-CS50-project0" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>                        
+                    </div>                                        
                 </div>
                 <!--Portfolio item 01-->
                 <div class="portfolio">
-                    <a href="https://ammarwiki.herokuapp.com/" target="_blank" class="portfolio--item">
+                    <div class="portfolio--item">
                         <img src="img/wiki.png" alt="" class="portfolio--img">
-                    </a>
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Wiki</span>
+                            <span class="portfolio--description---detail">Python - Django - HTML - Bootstrap - CSS</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://ammarwiki.herokuapp.com/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/wiki-CS50-project1" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                   
                 </div>
                 <!--Portfolio item 01-->
                 <div class="portfolio">
-                    <a href="https://motiv-fyyur.herokuapp.com/" target="_blank" class="portfolio--item">
+                    <div class="portfolio--item">
                         <img src="img/fyyur.png" alt="" class="portfolio--img">
-                    </a>
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Fyyur</span>
+                            <span class="portfolio--description---detail">Python - FLask - PostgreSQL - HTML - CSS - Bootstrap</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://motiv-fyyur.herokuapp.com/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/Fyyur-FSND-Project1/tree/master/starter_code" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                    
                 </div>
                 <!--Portfolio item 01-->
                 <div class="portfolio">
-                    <a href="https://am-commerce.herokuapp.com/" target="_blank" class="portfolio--item">
+                    <div class="portfolio--item">
                         <img src="img/commerce.png" alt="" class="portfolio--img">
-                    </a>
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Commerce</span>
+                            <span class="portfolio--description---detail">Python - Django - SQL - HTML - CSS - Bootstrap</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://am-commerce.herokuapp.com/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/commerce-CS50-project2" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
                 </div>         
             </section>
         </section>
@@ -138,24 +168,25 @@
             <section class="contact" id="contact">
                 <h3>Contact Me</h3>
             </section>
-                <a href="mailto:ammar.code01@gmail.com" class="footer--link">ammar.code01@gmail.com</a>
-            <ul class="social-list">
-                <li class="social-list--item">
-                    <a class="social-list--link" 
-                    href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                </li>
-                <li class="social-list--item">
-                    <a class="social-list--link" 
-                    href="https://github.com/AmmarCode" target="_blank">
+                <a class="social--link" href="mailto:ammar.code01@gmail.com">
+                    <i class="far fa-envelope"></i>
+                </a>
+                <a class="social--link" href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
+                        <i class="fab fa-linkedin" style="color: #0e76a8"></i>
+                </a>
+                <a class="social--link" href="https://github.com/AmmarCode" target="_blank">
                         <i class="fab fa-github"></i>
-                    </a>
-                </li>
-            </ul>
+                </a>
             <p class="copyright"><i class="far fa-copyright"></i> Ammar Jalabi 2021</p
         </footer>
 
         <script src="js/index.js"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init({
+              offset: 250,
+              duration: 1000
+          });
+        </script>  
     </body>
 </html>
