--- a/index.html
+++ b/index.html
@@ -42,11 +42,16 @@
                 <p class="section-subtitle--intro" ><span class="txt-type" data-wait="3000" data-words='["A Full-Stack Software Developer based in Tempe, Arizona.", "I Enjoy learning new technologies and developing dynamic Software."]'></span><span class="cursor">&nbsp;</span></p>
                 <ul class="social-list--intro">
                     <li class="social-list--item---intro">
+                        <a class="social-list--link---intro" href="mailto:ammar.code01@gmail.com">
+                            <i id="icon" class="far fa-envelope"></i>
+                        </a>
+                    </li>
+                    <li class="social-list--item---intro">
                         <a class="social-list--link---intro" 
                         href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
                             <i id="icon" class="fab fa-linkedin"></i>
                         </a>
-                    </li>
+                    </li>                    
                     <li class="social-list--item---intro">
                         <a class="social-list--link---intro" 
                         href="https://github.com/AmmarCode" target="_blank">
@@ -176,6 +181,9 @@
                 </a>
                 <a class="social--link" href="https://github.com/AmmarCode" target="_blank">
                         <i class="fab fa-github"></i>
+                </a>
+                <a class="social--link" href="img/Ammar Jalabi Resume 2021.pdf" download target="_blank">
+                    <i class="fas fa-file-alt"></i>
                 </a>
             <p class="copyright"><i class="far fa-copyright"></i> Ammar Jalabi 2021</p
         </footer>
