Update Resume and location

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h1 class="section-title--intro" >
                      Hello, I am <strong>Ammar Jalabi</strong>
                 </h1>
-                <p class="section-subtitle--intro" ><span class="txt-type" data-wait="3000" data-words='["A Full-Stack Software Developer based in Tempe, Arizona.", "I Enjoy learning new technologies and developing dynamic Software."]'></span><span class="cursor">&nbsp;</span></p>
+                <p class="section-subtitle--intro" ><span class="txt-type" data-wait="3000" data-words='["A Full-Stack Software Developer based in Columbia, South Carolina.", "I Enjoy learning new technologies and developing dynamic Software."]'></span><span class="cursor">&nbsp;</span></p>
                 <ul class="social-list--intro">
                     <li class="social-list--item---intro">
                         <a class="social-list--link---intro" href="mailto:ammar.code01@gmail.com">
@@ -59,7 +59,7 @@
                         </a>
                     </li>
                     <li class="social-list--item---intro">
-                        <a href="img/Ammar Jalabi Resume 2021.pdf" download class="social-list--link---intro" target="_blank">
+                        <a href="img/Ammar Jalabi Resume 07.2021.pdf" download class="social-list--link---intro" target="_blank">
                             <i id="icon" class="fas fa-file-alt"></i>
                         </a>
                     </li>
