Update Resume, Add mail and trivia projects

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="img/Ammar Jalabi Resume 2021.pdf" class="nav-link" target="_blank">Resume</a></li>
+                    <li class="nav-item"><a href="img/Ammar Jalabi Resume 07.2021.pdf" class="nav-link" target="_blank">Resume</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -79,8 +79,8 @@
                     <p>
                         Demonstrated achiever with a track record of self-teaching through multiple programming courses/certificates. Possess great communication skills combined with fluency in several languages (English, Arabic, Mandarin, and Turkish). Fast learner, and strong problem solver. Engaged team player, with lots of positive energy.
                     </br>                    
-                        Skilled in <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>JavaScript</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
-                        <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu 20.04</strong>. Always eager to grow and learn new technologies.
+                        Skilled in <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>JavaScript</strong> | <strong>React JS</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
+                        <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu</strong>. Always eager to grow and learn new technologies.
                     </br>            
                         Seeking opportunities to leverage my skills with a Software Engineering team to contribute towards a common goal.
                     </p>
@@ -95,12 +95,12 @@
                 <img src="img/python.png" class="skill--img" data-aos="fade-up">
                 <img src="img/django.png" class="skill--img" data-aos="fade-down">
                 <img src="img/postgresql.png" class="skill--img" data-aos="fade-up">
+                <img src="img/javascript.png" class="skill--img" data-aos="fade-down">
+                <img src="img/react.png" class="skill--img" data-aos="fade-up">
                 <img src="img/html5.png" class="skill--img" data-aos="fade-down">
                 <img src="img/css3.png" class="skill--img" data-aos="fade-up">
-                <img src="img/javascript.png" class="skill--img" data-aos="fade-down">
-                <img src="img/git.png" class="skill--img" data-aos="fade-up">
-                <img src="img/github.png" class="skill--img" data-aos="fade-down">
-                <img src="img/sass.png" class="skill--img" data-aos="fade-up">
+                <img src="img/git.png" class="skill--img" data-aos="fade-down">
+                <img src="img/github.png" class="skill--img" data-aos="fade-up">
             </div>
         </section>
 
@@ -122,7 +122,7 @@
                         </div>                        
                     </div>                                        
                 </div>
-                <!--Portfolio item 01-->
+                <!--Portfolio item 02-->
                 <div class="portfolio">
                     <div class="portfolio--item">
                         <img src="img/wiki.png" alt="" class="portfolio--img">
@@ -136,7 +136,7 @@
                         </div>             
                     </div>                   
                 </div>
-                <!--Portfolio item 01-->
+                <!--Portfolio item 03-->
                 <div class="portfolio">
                     <div class="portfolio--item">
                         <img src="img/fyyur.png" alt="" class="portfolio--img">
@@ -150,7 +150,7 @@
                         </div>             
                     </div>                    
                 </div>
-                <!--Portfolio item 01-->
+                <!--Portfolio item 04-->
                 <div class="portfolio">
                     <div class="portfolio--item">
                         <img src="img/commerce.png" alt="" class="portfolio--img">
@@ -163,7 +163,33 @@
                             </div>
                         </div>             
                     </div>                  
-                </div>         
+                </div>
+                <!--Portfolio item 05-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/trivia.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Udacitrivia</span>
+                            <span class="portfolio--description---detail">Python - Flask - PostgreSQL - ReactJS - CSS</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://github.com/AmmarCode/Trivia-API-FSND-Project2/tree/master/starter" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>
+                <!--Portfolio item 06-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/mail.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Mail</span>
+                            <span class="portfolio--description---detail">Python - Django - SQL - JavaScript - HTML - CSS - Bootstrap</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://github.com/AmmarCode/mail-CS50-project3" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>
             </section>
         </section>
 
@@ -182,7 +208,7 @@
                 <a class="social--link" href="https://github.com/AmmarCode" target="_blank">
                         <i class="fab fa-github"></i>
                 </a>
-                <a class="social--link" href="img/Ammar Jalabi Resume 2021.pdf" download target="_blank">
+                <a class="social--link" href="img/Ammar Jalabi Resume 07.2021.pdf" download target="_blank">
                     <i class="fas fa-file-alt"></i>
                 </a>
             <p class="copyright"><i class="far fa-copyright"></i> Ammar Jalabi 2021</p
