--- a/index.html
+++ b/index.html
@@ -77,12 +77,19 @@
             <section class="about">
                 <div class="section-body--about" data-aos="fade-up">
                     <p>
-                        Demonstrated achiever with a track record of self-teaching through multiple programming courses/certificates. Possess great communication skills combined with fluency in several languages (English, Arabic, Mandarin, and Turkish). Fast learner, and strong problem solver. Engaged team player, with lots of positive energy.
-                    </br>                    
-                        Skilled in <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>JavaScript</strong> | <strong>React JS</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
+                        Demonstrated achiever with a track record of self-teaching through Python and Full-Stack Web Development courses.                     
+                        Fast learner, with self-discipline, motivation, and time management, was able to graduate from both courses in half the expected finishing time.
+                    </br>
+                    </br>
+                        Possess great communication skills combined with fluency in several languages (English, Arabic, Mandarin, and Turkish).                    
+                        Strong problem solver, diagnosed, repaired, and serviced customer’s vehicles at a Volkswagen Dealership Service Shop.
+                    </br>
+                    </br>
+                        Experienced creating multiple web apps utilizing <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>JavaScript</strong> | <strong>React JS</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
                         <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu</strong>. Always eager to grow and learn new technologies.
+                    </br>
                     </br>            
-                        Seeking opportunities to leverage my skills with a Software Engineering team to contribute towards a common goal.
+                        Seeking opportunities to leverage my skills with a Software Engineering team to positively impact millions of people by developing innovative software.
                     </p>
                 </div>
             </section>
