Update Resume file and about me section

--- a/index.html
+++ b/index.html
@@ -78,14 +78,16 @@
                 <div class="section-body--about" data-aos="fade-up">
                     <p>
                         Demonstrated achiever with a track record of self-teaching through Python and Full-Stack Web Development courses.                     
-                        Fast learner, with self-discipline, motivation, and time management, was able to graduate from both courses in half the expected finishing time.
+                        Fast learner, managed to graduate from both courses in half the expected finishing time.
                     </br>
                     </br>
                         Possess great communication skills combined with fluency in several languages (English, Arabic, Mandarin, and Turkish).                    
-                        Strong problem solver, diagnosed, repaired, and serviced customer’s vehicles at a Volkswagen Dealership Service Shop.
+                        Team player, actively reviewed code and exchanged tips and advice with other students during the programming courses.
+                        
                     </br>
                     </br>
-                        Experienced creating multiple web apps utilizing <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>JavaScript</strong> | <strong>React JS</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
+                        Strong problem solver, developed multiple web applications, following programming principles, and best practices,
+                        utilizing <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>JavaScript</strong> | <strong>React JS</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
                         <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu</strong>. Always eager to grow and learn new technologies.
                     </br>
                     </br>            
