Add portfolio item

--- a/index.html
+++ b/index.html
@@ -199,6 +199,20 @@
                         </div>             
                     </div>                  
                 </div>
+                <!--Portfolio item 07-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/face-detector.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Face-Detector</span>
+                            <span class="portfolio--description---detail">React.js - Node.js - PostgreSQL - REST API - CSS - Tachyons</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://ammarcode.github.io/faceRecognition/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/faceRecognition" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>                
             </section>
         </section>
 
