Update about section

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
             <section class="about">
                 <div class="section-body--about" data-aos="fade-up">
                     <p>
-                        Demonstrated achiever with a track record of self-teaching through Python and Full-Stack Web Development courses.                     
-                        Fast learner, managed to graduate from both courses in half the expected finishing time.
-                    </br>
-                    </br>
-                        Possess great communication skills combined with fluency in several languages (English, Arabic, Mandarin, and Turkish).                    
-                        Team player, actively reviewed code and exchanged tips and advice with other students during the programming courses.
-                        
-                    </br>
-                    </br>
-                        Strong problem solver, developed multiple web applications, following programming principles, and best practices,
-                        utilizing <strong>Python</strong> | <strong>Django</strong> | <strong>PostgreSQL</strong> | <strong>JavaScript</strong> | <strong>React JS</strong> | <strong>HTML</strong> | <strong>CSS</strong> | <strong>Flask</strong> | <strong>REST API</strong> | <strong>Git</strong> | <strong>GitHub</strong> |
-                        <strong>SASS</strong> | <strong>Bootstrap</strong> | <strong>AWS</strong> | <strong>Docker</strong> | <strong>Kubernetes</strong> | <strong>Unittest</strong> | <strong>Postman</strong> | <strong>Ubuntu</strong>. Always eager to grow and learn new technologies.
-                    </br>
-                    </br>            
-                        Seeking opportunities to leverage my skills with a Software Engineering team to positively impact millions of people by developing innovative software.
+                        Welcome to my portfolio website! I'm a Mixed martial artist who turned his back on using his physical abilities to earn a living 
+                        for using his brain to make a positive impact on human lives.
                     </p>
+                    <p>
+                        I taught myself Software Development by taking multiple self-paced programming courses, 
+                        as well as taking advantage of the tons of free resources out there!
+                    </p>
+                    <p>
+                        could have taken an easier route by joining a coding Bootcamp as a lot of the career switchers do. 
+                        But I'm not the type of man that backs off of a tough challenge. I'm glad I chose this route as it took me a little longer, 
+                        which in return gave me more time to fully understand Software Engineering theories and allowed me to get real-life experience 
+                        in problem-solving, getting unstuck while developing and debugging software, finding answers by googling, StackOverflow, and reading documentations.
+                    </p>
+                    <p>
+                        I'm really excited to put my hard-earned skills to work. To solve one problem at a time, to improve the quality of life for myself and others!
+                    </p>                    
                 </div>
             </section>
         </section>
