--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
             <section class="about">
                 <div class="section-body--about" data-aos="fade-up">
                     <p>
-                        Welcome to my portfolio website! I'm a Mixed martial artist who turned his back on using his physical abilities to earn a living 
-                        for using his brain to make a positive impact on human lives.
+                        Welcome to my portfolio website! I'm a Mixed martial artist who turned his back on using his physical abilities to earn a living, 
+                        to start using his brain to make a positive impact on human lives.
                     </p>
                     <p>
                         I taught myself Software Development by taking multiple self-paced programming courses, 
                         as well as taking advantage of the tons of free resources out there!
                     </p>
                     <p>
-                        could have taken an easier route by joining a coding Bootcamp as a lot of the career switchers do. 
+                        I could have taken an easier route by joining a coding Bootcamp as a lot of the career switchers do. 
                         But I'm not the type of man that backs off of a tough challenge. I'm glad I chose this route as it took me a little longer, 
                         which in return gave me more time to fully understand Software Engineering theories and allowed me to get real-life experience 
                         in problem-solving, getting unstuck while developing and debugging software, finding answers by googling, StackOverflow, and reading documentations.
