--- a/index.html
+++ b/index.html
@@ -77,21 +77,19 @@
             <section class="about">
                 <div class="section-body--about" data-aos="fade-up">
                     <p>
-                        Welcome to my portfolio website! I'm a Mixed martial artist who turned his back on using his physical abilities to earn a living 
-                        for using his brain to make a positive impact on human lives.
+                        Welcome to my portfolio website! I'm a Mixed martial artist turned Full-Stack Software Developer.
                     </p>
                     <p>
                         I taught myself Software Development by taking multiple self-paced programming courses, 
                         as well as taking advantage of the tons of free resources out there!
                     </p>
                     <p>
-                        could have taken an easier route by joining a coding Bootcamp as a lot of the career switchers do. 
-                        But I'm not the type of man that backs off of a tough challenge. I'm glad I chose this route as it took me a little longer, 
-                        which in return gave me more time to fully understand Software Engineering theories and allowed me to get real-life experience 
+                        I could have taken the easier route by joining a coding Bootcamp as a lot of the career switchers do. 
+                        But I'm not the type of man that backs off of a tough challenge. I'm glad I chose this route as it gave me more time to fully understand Software Engineering theories and allowed me to get real-life experience 
                         in problem-solving, getting unstuck while developing and debugging software, finding answers by googling, StackOverflow, and reading documentations.
                     </p>
                     <p>
-                        I'm really excited to put my hard-earned skills to work. To solve one problem at a time, to improve the quality of life for myself and others!
+                        I'm really excited to put my hard-earned skills to work. Building dynamic responsive Software.
                     </p>                    
                 </div>
             </section>
@@ -212,7 +210,35 @@
                             </div>
                         </div>             
                     </div>                  
-                </div>                
+                </div>
+                <!--Portfolio item 08-->
+                <div class="portfolio">
+                   <div class="portfolio--item">
+                       <img src="img/FEM1.png" alt="" class="portfolio--img">
+                       <div class="portfolio--description">
+                           <span class="portfolio--description---title">QR-Code-Componenet</span>
+                           <span class="portfolio--description---detail">HTML - CSS</span>                  
+                           <div class="d">
+                               <a class="btn" href="https://ammarcode.github.io/qr-code-component-main/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                               <a class="btn" href="https://github.com/AmmarCode/qr-code-component-main" target="_blank"><i class="fab fa-github"></i></a>
+                           </div>
+                       </div>             
+                   </div>                  
+                </div>                 
+                <!--Portfolio item 09-->
+                <div class="portfolio">
+                   <div class="portfolio--item">
+                       <img src="img/FEM2.png" alt="" class="portfolio--img">
+                       <div class="portfolio--description">
+                           <span class="portfolio--description---title">NFT-Preview-Card</span>
+                           <span class="portfolio--description---detail">HTML - CSS</span>                  
+                           <div class="d">
+                               <a class="btn" href="https://ammarcode.github.io/nft-preview-card-component-main/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                               <a class="btn" href="https://github.com/AmmarCode/nft-preview-card-component-main" target="_blank"><i class="fab fa-github"></i></a>
+                           </div>
+                       </div>             
+                   </div>                  
+                </div>
             </section>
         </section>
 
