--- a/index.html
+++ b/index.html
@@ -128,104 +128,8 @@
                             </div>
                         </div>                        
                     </div>                                        
-                </div>
+                </div>                
                 <!--Portfolio item 02-->
-                <div class="portfolio">
-                    <div class="portfolio--item">
-                        <img src="img/wiki.png" alt="" class="portfolio--img">
-                        <div class="portfolio--description">
-                            <span class="portfolio--description---title">Wiki</span>
-                            <span class="portfolio--description---detail">Python - Django - HTML - Bootstrap - CSS</span>                  
-                            <div class="d">
-                                <a class="btn" href="https://ammarwiki.herokuapp.com/" target="_blank">Live</a> <span class="btn-pipe">|</span>
-                                <a class="btn" href="https://github.com/AmmarCode/wiki-CS50-project1" target="_blank"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>             
-                    </div>                   
-                </div>
-                <!--Portfolio item 03-->
-                <div class="portfolio">
-                    <div class="portfolio--item">
-                        <img src="img/fyyur.png" alt="" class="portfolio--img">
-                        <div class="portfolio--description">
-                            <span class="portfolio--description---title">Fyyur</span>
-                            <span class="portfolio--description---detail">Python - FLask - PostgreSQL - HTML - CSS - Bootstrap</span>                  
-                            <div class="d">
-                                <a class="btn" href="https://motiv-fyyur.herokuapp.com/" target="_blank">Live</a> <span class="btn-pipe">|</span>
-                                <a class="btn" href="https://github.com/AmmarCode/Fyyur-FSND-Project1/tree/master/starter_code" target="_blank"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>             
-                    </div>                    
-                </div>
-                <!--Portfolio item 04-->
-                <div class="portfolio">
-                    <div class="portfolio--item">
-                        <img src="img/commerce.png" alt="" class="portfolio--img">
-                        <div class="portfolio--description">
-                            <span class="portfolio--description---title">Commerce</span>
-                            <span class="portfolio--description---detail">Python - Django - SQL - HTML - CSS - Bootstrap</span>                  
-                            <div class="d">
-                                <a class="btn" href="https://am-commerce.herokuapp.com/" target="_blank">Live</a> <span class="btn-pipe">|</span>
-                                <a class="btn" href="https://github.com/AmmarCode/commerce-CS50-project2" target="_blank"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>             
-                    </div>                  
-                </div>
-                <!--Portfolio item 05-->
-                <div class="portfolio">
-                    <div class="portfolio--item">
-                        <img src="img/trivia.png" alt="" class="portfolio--img">
-                        <div class="portfolio--description">
-                            <span class="portfolio--description---title">Udacitrivia</span>
-                            <span class="portfolio--description---detail">Python - Flask - PostgreSQL - ReactJS - CSS</span>                  
-                            <div class="d">
-                                <a class="btn" href="https://github.com/AmmarCode/Trivia-API-FSND-Project2/tree/master/starter" target="_blank"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>             
-                    </div>                  
-                </div>
-                <!--Portfolio item 06-->
-                <div class="portfolio">
-                    <div class="portfolio--item">
-                        <img src="img/mail.png" alt="" class="portfolio--img">
-                        <div class="portfolio--description">
-                            <span class="portfolio--description---title">Mail</span>
-                            <span class="portfolio--description---detail">Python - Django - SQL - JavaScript - HTML - CSS - Bootstrap</span>                  
-                            <div class="d">
-                                <a class="btn" href="https://github.com/AmmarCode/mail-CS50-project3" target="_blank"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>             
-                    </div>                  
-                </div>
-                <!--Portfolio item 07-->
-                <div class="portfolio">
-                    <div class="portfolio--item">
-                        <img src="img/face-detector.png" alt="" class="portfolio--img">
-                        <div class="portfolio--description">
-                            <span class="portfolio--description---title">Face-Detector</span>
-                            <span class="portfolio--description---detail">React.js - Node.js - PostgreSQL - REST API - CSS - Tachyons</span>                  
-                            <div class="d">
-                                <a class="btn" href="https://ammarcode.github.io/faceRecognition/" target="_blank">Live</a> <span class="btn-pipe">|</span>
-                                <a class="btn" href="https://github.com/AmmarCode/faceRecognition" target="_blank"><i class="fab fa-github"></i></a>
-                            </div>
-                        </div>             
-                    </div>                  
-                </div>
-                <!--Portfolio item 08-->
-                <div class="portfolio">
-                   <div class="portfolio--item">
-                       <img src="img/FEM1.png" alt="" class="portfolio--img">
-                       <div class="portfolio--description">
-                           <span class="portfolio--description---title">QR-Code-Componenet</span>
-                           <span class="portfolio--description---detail">HTML - CSS</span>                  
-                           <div class="d">
-                               <a class="btn" href="https://ammarcode.github.io/qr-code-component-main/" target="_blank">Live</a> <span class="btn-pipe">|</span>
-                               <a class="btn" href="https://github.com/AmmarCode/qr-code-component-main" target="_blank"><i class="fab fa-github"></i></a>
-                           </div>
-                       </div>             
-                   </div>                  
-                </div>                 
-                <!--Portfolio item 09-->
                 <div class="portfolio">
                    <div class="portfolio--item">
                        <img src="img/FEM2.png" alt="" class="portfolio--img">
@@ -239,6 +143,88 @@
                        </div>             
                    </div>                  
                 </div>
+                <!--Portfolio item 03-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/FEM3.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Tetimonial Grid Section</span>
+                            <span class="portfolio--description---detail">HTML - CSS</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://ammarcode.github.io/testimonials-grid-section/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/testimonials-grid-section" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                   
+                </div>
+                <!--Portfolio item 04-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/FEM4.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Social Media Dashboard</span>
+                            <span class="portfolio--description---detail">HTML - CSS - JavaScript</span>
+                            <div class="d">
+                                <a class="btn" href="https://ammarcode.github.io/social-media-dashboard-with-theme-switcher/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/social-media-dashboard-with-theme-switcher" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>0
+                        </div>             
+                    </div>                    
+                </div>                
+                <!--Portfolio item 05-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/commerce.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Commerce</span>
+                            <span class="portfolio--description---detail">Python - Django - SQL - HTML - CSS - Bootstrap</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://am-commerce.herokuapp.com/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/commerce-CS50-project2" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>
+                <!--Portfolio item 06-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/trivia.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Udacitrivia</span>
+                            <span class="portfolio--description---detail">Python - Flask - PostgreSQL - ReactJS - CSS</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://github.com/AmmarCode/Trivia-API-FSND-Project2/tree/master/starter" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>
+                <!--Portfolio item 07-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/mail.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Mail</span>
+                            <span class="portfolio--description---detail">Python - Django - SQL - JavaScript - HTML - CSS - Bootstrap</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://github.com/AmmarCode/mail-CS50-project3" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>
+                <!--Portfolio item 08-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/face-detector.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">Face-Detector</span>
+                            <span class="portfolio--description---detail">React.js - Node.js - PostgreSQL - REST API - CSS - Tachyons</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://ammarcode.github.io/faceRecognition/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/faceRecognition" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>            
             </section>
         </section>
 
