--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="img/Ammar Jalabi Resume 09.2021.pdf" class="nav-link" target="_blank">Resume</a></li>
+                    <li class="nav-item"><a href="img/Ammar Jalabi Resume.pdf" class="nav-link" target="_blank">Resume</a></li>
                     <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                     <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -42,24 +42,30 @@
                 <p class="section-subtitle--intro" ><span class="txt-type" data-wait="3000" data-words='["A Full-Stack Software Developer based in Columbia, South Carolina.", "I Enjoy learning new technologies and developing dynamic Software."]'></span><span class="cursor">&nbsp;</span></p>
                 <ul class="social-list--intro">
                     <li class="social-list--item---intro">
-                        <a class="social-list--link---intro" href="mailto:ammar.code01@gmail.com">
+                        <a class="social-list--link---intro" data-descr="Email me!" 
+                        href="mailto:ammar.code01@gmail.com">
                             <i id="icon" class="far fa-envelope"></i>
                         </a>
                     </li>
                     <li class="social-list--item---intro">
                         <a class="social-list--link---intro" 
+                        data-descr="Connnect with me on Linkedin!"
                         href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
                             <i id="icon" class="fab fa-linkedin"></i>
                         </a>
                     </li>                    
                     <li class="social-list--item---intro">
                         <a class="social-list--link---intro" 
-                        href="https://github.com/AmmarCode" target="_blank">
+                        data-descr="Check out my projects repos!"
+                        href="https://github.com/AmmarCode" 
+                        target="_blank" aria-label="Ammar's Github">
                             <i id="icon" class="fab fa-github"></i>
                         </a>
                     </li>
-                    <li class="social-list--item---intro">
-                        <a href="img/Ammar Jalabi Resume 09.2021.pdf" download class="social-list--link---intro" target="_blank">
+                    <li class="social-list--item---intro"> 
+                        <a href="img/Ammar Jalabi Resume.pdf" 
+                        data-descr="Donwload my resume!" 
+                        download class="social-list--link---intro" target="_blank">
                             <i id="icon" class="fas fa-file-alt"></i>
                         </a>
                     </li>
@@ -240,10 +246,7 @@
                 <a class="social--link" href="https://www.linkedin.com/in/ammar-jalabi-685a78114/" target="_blank">
                         <i class="fab fa-linkedin" style="color: #0e76a8"></i>
                 </a>
-                <a class="social--link" href="https://github.com/AmmarCode" target="_blank">
-                        <i class="fab fa-github"></i>
-                </a>
-                <a class="social--link" href="img/Ammar Jalabi Resume 09.2021.pdf" download target="_blank">
+                <a class="social--link" href="img/Ammar Jalabi Resume.pdf" download target="_blank">
                     <i class="fas fa-file-alt"></i>
                 </a>
             <p class="copyright"><i class="far fa-copyright"></i> Ammar Jalabi 2021</p
