--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                         as well as taking advantage of the tons of free resources out there!
                     </p>
                     <p>
-                        I could have taken the easier route by joining a coding Bootcamp as a lot of the career switchers do. 
-                        But I'm not the type of man that backs off of a tough challenge. I'm glad I chose this route as it gave me more time to fully understand Software Engineering theories and allowed me to get real-life experience 
-                        in problem-solving, getting unstuck while developing and debugging software, finding answers by googling, StackOverflow, and reading documentations.
+                        I could have taken an easier route by joining a coding Bootcamp as most of the career switchers do. 
+                        But I'm not the type of man that backs off of a tough challenge. I'm glad I chose this route. 
+                        The experience I gained depending on myself to problem solve, develop and debug software, 
+                        find answers on Google, Stackoverflow, and Documentations prepared me well to become a successful Software Engineer.
                     </p>
                     <p>
                         I'm really excited to put my hard-earned skills to work. Building dynamic responsive Software.
