--- a/index.html
+++ b/index.html
@@ -175,7 +175,21 @@
                             </div>0
                         </div>             
                     </div>                    
-                </div>                
+                </div>
+                <!--Portfolio item 05-->
+                <div class="portfolio">
+                    <div class="portfolio--item">
+                        <img src="img/FEM5.png" alt="" class="portfolio--img">
+                        <div class="portfolio--description">
+                            <span class="portfolio--description---title">E-commerce product page</span>
+                            <span class="portfolio--description---detail">HTML - CSS - Bootstrap - JavaScript</span>                  
+                            <div class="d">
+                                <a class="btn" href="https://ammarcode.github.io/E-commerce-product-page/" target="_blank">Live</a> <span class="btn-pipe">|</span>
+                                <a class="btn" href="https://github.com/AmmarCode/E-commerce-product-page" target="_blank"><i class="fab fa-github"></i></a>
+                            </div>
+                        </div>             
+                    </div>                  
+                </div>
                 <!--Portfolio item 05-->
                 <div class="portfolio">
                     <div class="portfolio--item">
