--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
                         as well as taking advantage of the tons of free resources out there!
                     </p>
                     <p>
-                        I could have taken an easier route by joining a coding Bootcamp as most of the career switchers do. 
-                        But I'm not the type of man that backs off of a tough challenge. I'm glad I chose this route. 
-                        The experience I gained depending on myself to problem solve, develop and debug software, 
+                       I'm glad I chose this route. The experience I gained depending on myself to problem solve, develop and debug software, 
                         find answers on Google, Stackoverflow, and Documentations prepared me well to become a successful Software Engineer.
                     </p>
                     <p>
